# pdf2foundry

./: .codespellrc  .gitignore  .markdownlintignore  .pre-commit-config.yaml  README.md  RELEASE_NOTES.md  package-lock.json  package.json  pdf2foundry.code-workspace  pyproject.toml
.cursor/rules/: 00-core-project-overview.mdc  10-python-standards.mdc  20-cli-contract.mdc  30-foundry-json-packaging.mdc  40-node-foundry-cli.mdc  50-html-assets.mdc  60-errors-logging.mdc  70-precommit-quality.mdc  80-markdown-quality.mdc  90-task-completion-quality-gates.mdc  cursor_rules.mdc  python-qa-engineer.mdc  self_improve.mdc
.github/workflows/: ci.yml  e2e-performance-analysis.yml  e2e-test-orchestrator.yml  e2e-tier1-core-tests.yml  e2e-tier2-feature-tests.yml  e2e-tier3-ml-tests.yml  e2e.yml  publish.yml
docs/: DEVELOPMENT.md  PRD.md  architecture_and_flow.md  architecture_docling_full_document_plan.md  docling_capabilities_gap_analysis.md  docling_refactor_unified_plan.md  e2e-testing-strategy.md  github-actions-robust-testing-plan.md  performance.md  sample.journal_entry.json  sample.md  sample.module.json  technical_feasibility.md
docs/gui/: gui-prd.md
docs/samples/: sample.md  sample.module.json
scripts/: check_file_length.py  compile-pack-debug.js  release.py
src/pdf2foundry/: __init__.py  __main__.py  cli.py  docling_env.py  ids.py  parser.py  types.py
src/pdf2foundry/backend/: __init__.py  caps.py
src/pdf2foundry/builder/: ir_builder.py  manifest.py  packaging.py  toc.py
src/pdf2foundry/cli/: __init__.py  conversion.py  display.py  interactive.py  main.py  parse.py  validation.py
src/pdf2foundry/ingest/: caption_engine.py  caption_processor.py  content_extractor.py  docling_adapter.py  docling_parser.py  error_handling.py  feature_logger.py  image_cache.py  (+8 more)
tests/: conftest.py  test_assembly.py  test_backend_caps.py  test_basic.py  test_build_ir_builder.py  test_builder_manifest_extra.py  test_builder_toc.py  test_builder_toc_template.py  test_cli.py  test_cli_convert_pipeline_options.py  test_cli_convert_single_pass.py  test_cli_doctor.py  test_cli_interactive.py  test_cli_pages_flag.py  test_cli_parse.py  test_cli_performance_combined.py  test_cli_workers_flag.py  test_docling_env.py  test_feature_error_handling.py  test_foundry_mapping.py  test_foundry_validation.py  test_html_convert.py  test_id_utils.py  test_ids.py  test_image_cache_performance.py  test_ingest_caption_engine.py  test_ingest_caption_processor_init.py  test_ingest_content_extractor.py  test_ingest_docling_adapter.py  test_ingest_docling_adapter_extra.py  test_ingest_docling_parser.py  test_ingest_heuristics.py  test_ingest_images_extraction.py  test_ingest_ingestion.py  test_ingest_ocr_engine.py  test_ingest_ocr_integration.py  test_ingest_page_selection.py  test_ingest_table_processor.py  test_ingest_table_processor_basic.py  test_ingest_table_processor_integration.py  (+24 more)
tests/e2e/: README.md  __init__.py  conftest.py  test_conftest.py  test_diagnostics.py  test_e2e_001_basic.py  test_e2e_001_basic_no_ml.py  test_e2e_002_images.py  test_e2e_003_tables.py  test_e2e_004_ocr.py  test_e2e_005_captions.py  test_e2e_005_resilience.py  test_e2e_006_performance.py  test_e2e_007_caching.py  test_e2e_008_compilation.py  test_e2e_009_integration.py  test_e2e_010_basic_errors.py  test_e2e_010_dependency_errors.py  test_e2e_010_vlm_errors.py  test_e2e_conditional_ml.py  test_feature_checking.py  test_fixtures.py  test_smoke.py  test_validation_utils.py
tests/unit/: test_backend_caps.py  test_basic.py  test_builder_toc.py  test_cli_convert.py  test_cli_convert_pipeline_options.py  test_cli_convert_single_pass.py  test_cli_performance_combined.py  test_cli_reflow_flag.py  test_cli_version.py  test_core_feature_detection.py  test_core_timeout.py  test_feature_error_handling.py  test_image_cache_performance.py  test_ingest_caption_engine.py  test_ingest_caption_engine_advanced.py  test_ingest_caption_processor_apply.py  test_ingest_docling_adapter.py  test_ingest_docling_adapter_advanced.py  test_ingest_docling_parser.py  test_ingest_error_context.py  test_ingest_error_exceptions.py  test_ingest_error_manager.py  test_ingest_ocr_engine.py  test_ingest_ocr_integration.py  test_ingest_table_processor_basic.py  test_model_bbox.py  test_model_foundry.py  test_model_structured_table.py  test_packaging.py  test_parallel_processor.py  test_single_pass_conversion_caching.py  test_structured_tables_iter.py  test_structured_tables_utils.py  test_transform_clean_html.py  test_transform_layout.py  test_transform_reflow_utils.py
(+43 files in other folders)
