[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2foundry"
version = "0.1.0"
description = "Convert born-digital PDFs into Foundry VTT v12+ module compendia."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Martin Papy", email = "martin.papy@gmail.com" }
]
dependencies = [
  "typer>=0.12.0",
  "jinja2>=3.1.0",
  "pillow>=10.0.0",
  "rich>=13.7.0",
  "docling>=2.0.0",
  "docling-core>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4.0",
  "black>=24.3.0",
  "mypy>=1.8.0",
  "pytest>=8.1.0",
  "pytest-cov>=5.0.0",
  "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/martin-papy/pdf2foundry"

[project.scripts]
pdf2foundry = "pdf2foundry.cli:app"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E","F","I","B","UP","C4","SIM","RUF"
]
ignore = ["ISC001"]

[tool.ruff.lint.isort]
known-first-party = ["pdf2foundry"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
pretty = true
exclude = [
  "^tests/.*$"
]

[tool.pytest.ini_options]
addopts = "-q --cov=pdf2foundry --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

